[tool.poetry]
name = "hyccup"
version = "1.0.0a4"
description = "A port of Clojure Hiccup for Hy"
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]
license = "MIT"
keywords = ["template", "html", "hiccup", "hy"]
include = ["hyccup/*.hy", "hyccup/__pycache__/*.pyc"]
repository = "https://github.com/Arkelis/hyccup"
documentation = "https://hyccup.pycolore.fr"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
hy = "1.0a4"
toolz = "^0.11.1"
multimethod = "^1.5"
hyrule = "^0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
Sphinx = "^4.1.2"
furo = "^2021.7.5-beta.38"
sphinx-inline-tabs = "^2021.4.11-beta.9"
sphinxcontrib-hydomain = {git = "https://github.com/hylang/sphinxcontrib-hydomain.git", rev ="35e422cbd8f17798a1c945220ddd9848e39ce2e8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
