[tool.poetry]
name = "hyccup"
version = "3.2.0"
description = "A port of Clojure Hiccup for Hy"
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]
license = "MIT"
keywords = ["template", "html", "hiccup", "hy"]
include = ["hyccup/*.hy", "hyccup/__pycache__/*.pyc"]
repository = "https://github.com/Arkelis/hyccup"
documentation = "https://hyccup.pycolore.fr"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
hy = "0.26.0"
toolz = "*"
hyrule = "*"
astor = "^0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
Sphinx = "^4.1.2"
furo = "*"
sphinx-inline-tabs = "*"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
